--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "reactjs-popup": "^2.0.6",
     "styled-components": "^6.0.7"
   }
 }
